package ca.levio.interviewrequest.enums;

public enum StatusOfRequest {
    OPENED,
    ASSIGNED,
    ACCEPTED,
    REJECTED_BY_TECHNICAL_ADVISOR,
    DECLINED_BY_RECRUITER;
}
