package ca.levio.interview.enums;

public enum StateOfInterview {
    OPEN,
    IN_PROGRESS,
    INTERRUPTED,
    CLOSED;
}
