package ca.levio.technicaladvisor.model;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import jakarta.persistence.*;

@Data
@Builder
@AllArgsConstructor
@NoArgsConstructor
@Entity
public class LineOfBusiness {
    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private String id;

    private String label;
}
